2005-09-04  Derek Price  <derek@ximbiot.com>

	* root.c (free_cvsroot_t): Update header comment.

	* root.c (new_cvsroot_t): directory is not client-specific.
	(free_cvsroot_t): Declare static.
	* root.h (free_cvsroot_t): Remove proto.
	* server.c (server_init): Don't free cvsroot_t when finished with it.

2005-09-03  Derek Price  <derek@ximbiot.com>

	* root.h (cvsroot_t->isremote): Update comment.

	* history.c (read_hrecs_file): Suppress signed/unsigned char warning.

	* root.h (cvsroot_t->isremote): Declare bool.
	* root.c (new_cvsroot_t): Initialize isremote to false instead of 0.

	* add.c (add_usage): Standardize usage message somewhat.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* parseinfo.c (parse_config): Variable declarations must precede
	executable code for pre-C99 compilers.  Pass correct line number
	variable to expand_path.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* recurse.c: Update bug report email address.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.h (expand_path): Update proto.
	* expand_path.c (expand_variable): Accept and use cvsroot arg inplace
	of global.
	(expand_path): Accept and pass through cvsroot arg.
	* main.c (main): Prescan args for config path before config options are
	used.  Pass config path on as needed.  Update comment. 
	* modules.c (do_module): Update expand_path call.
	* parseinfo.ci (Parse_Info): Ditto.
	(allowed_config_prefixes): New global.
	(parse_config): Accept configPath arg, update expand_path calls, and